--- a/app/templates/place/places.html
+++ b/app/templates/place/places.html
@@ -8,7 +8,7 @@
 	<ion-content class="has-header">
 		<ion-list
 			show-delete="vm.showDelete">
-			<ion-item ng-click="vm.goPlace(place)" ng-class="item-icon-right" ng-repeat="place in vm.getPlaces() track by $index">
+			<ion-item ui-sref="account.place({place: place})" ng-class="item-icon-right" ng-repeat="place in vm.getPlaces() track by $index">
 				<i class="icon ion-arrow-right-c"></i>
 				<p ng-bind="place.description"></p>
 				<ion-delete-button ng-click="vm.removePlace($index)" class="ion-minus-circled">
