--- a/app/templates/place/edit-place.html
+++ b/app/templates/place/edit-place.html
@@ -2,11 +2,11 @@
 	<ion-content class="has-header">
 		<label class="item item-input">
 			<span class="input-label">Name</span>
-			<input type="text" placeholder="Place name" ng-model="vm.placeName" ng-model-options="{ debounce: { 'default': 500, 'blur': 0 }, getterSetter: true }">
+			<input type="text" placeholder="Place name" ng-model="vm.placeName" ng-model-options="{ getterSetter: true }">
 		</label>
 		<label class="item item-input item-stacked-label">
 			<span class="input-label">Search</span>
-			<input type="text" placeholder="Address, place, interest point" ng-model="vm.search" ng-model-options="{ getterSetter: true }">
+			<input type="text" placeholder="Address, place, interest point" ng-model="vm.search" ng-model-options="{ updateOn: 'default blur',debounce: {default:700, blur: 0 }, getterSetter: true }">
 		</label>
 		<ion-list>
 			<ion-item ng-click="vm.setCurrentPrediction(prediction)" ng-repeat="prediction in vm.predictions track by $index">
