--- a/app/templates/account/list.html
+++ b/app/templates/account/list.html
@@ -4,7 +4,7 @@
 	</ion-nav-buttons>
 	<ion-content has-header="true">
 		<div class="list">
-			<a class="item item-icon-right" href="#/account/mysports">
+			<a class="item item-icon-right" ui-sref="account.mysports">
 				<i class="icon ion-arrow-right-c"></i>
 				My Sports
 			</a>
@@ -12,10 +12,10 @@
 				<i class="icon ion-arrow-right-c"></i>
 				Places
 			</a>
-			<ion-toggle ng-model="keepLocation" ng-model-options="{ getterSetter: true }" toggle-class="toggle-positive">
+			<ion-toggle ng-model="vm.keepLocation" ng-model-options="{ getterSetter: true }" toggle-class="toggle-positive">
 			Save Current Location
 			</ion-toggle>
-			<ion-item class="item item-icon-right" ng-click="logout()">
+			<ion-item class="item item-icon-right" ng-click="vm.logout()">
 				<i class="icon ion-log-out"></i>
 				Logout
 			</ion-item>
