--- a/app/templates/dash.html
+++ b/app/templates/dash.html
@@ -9,6 +9,49 @@
         Find partners
         <i class="icon ion-flag"></i>
       </a>
+      <a ui-sref="sessions" class="item item-icon-left">
+        <i class="icon ion-clipboard"></i>
+        Next sessions
+        <span class="badge badge-positive">3</span>
+      </a>
+      <a ui-sref="invitation" class="item item-icon-left">
+        <i class="icon ion-help"></i>
+        Invitations
+        <span class="badge badge-assertive">2</span>
+      </a>
+    </div>
+    <div class="item item-divider">
+      History
+    </div>
+    <div class="list card">
+      <div class="item item-text-wrap">
+        <h2>Cycling</h2>
+        <p>1 day ago</p>
+      </div>
+      <div class="item item-text-wrap">
+        Participants
+        <span class="badge badge-calm">2</span>
+      </div>
+    </div>
+    <div class="list card">
+      <div class="item item-text-wrap">
+        <h2>Running at work</h2>
+        <p>2 days ago</p>
+      </div>
+      <div class="item item-text-wrap">
+        Participants
+        <span class="badge badge-calm">0</span>
+      </div>
+    </div>
+    <div class="list card">
+      <div class="item item-text-wrap">
+        <h2>Soccer at Puteaux</h2>
+        <p>2 weeks ago</p>
+      </div>
+      <div class="item item-text-wrap">
+        Participants
+        <span class="badge badge-calm">10</span>
+      </div>
     </div>
   </ion-content>
 </ion-view>
