--- a/app/templates/dash.html
+++ b/app/templates/dash.html
@@ -23,7 +23,7 @@
     <div class="item item-divider">
       History
     </div>
-    <div class="list card">
+    <div class="card">
       <div class="item item-text-wrap">
         <h2>Cycling</h2>
         <p>1 day ago</p>
@@ -33,7 +33,7 @@
         <span class="badge badge-calm">2</span>
       </div>
     </div>
-    <div class="list card">
+    <div class="card">
       <div class="item item-text-wrap">
         <h2>Running at work</h2>
         <p>2 days ago</p>
@@ -43,7 +43,7 @@
         <span class="badge badge-calm">0</span>
       </div>
     </div>
-    <div class="list card">
+    <div class="card">
       <div class="item item-text-wrap">
         <h2>Soccer at Puteaux</h2>
         <p>2 weeks ago</p>
